// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`able to create team for user 1`] = `
Object {
  "data": Object {
    "CreateTeam": Object {
      "id": "1",
      "name": "A team name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to update team name for user 1`] = `
Object {
  "data": Object {
    "UpdateTeam": Object {
      "id": "1",
      "name": "A team name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`creating a team when team already exists returns an error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You have already created a team.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
